<resources>
    <string name="app_name">Cowin Notifier</string>
    <string name="no_data_message">Sorry we couldn\'t find any vaccination center.<br />
        Try searching for some other area</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="how_to_use">How to use</string>
    <string name="current_search">Current search</string>
    <string name="how_to_use_point_1">1. You can search either by <b>Pincode</b> or by <b>District</b></string>
    <string name="how_to_use_point_2">2. Age &amp; vaccine filter <b>None</b> will show all available results</string>
    <string name="how_to_use_point_3"> 3. Press back button &amp; select <b>Yes</b> from <b>Search Results</b> page to start background search</string>
    <string name="how_to_use_point_4">4. On selecting <b>Yes</b>, you can close the app. A notification would be sent when slots are available for current search parameter</string>
    <string name="how_to_use_point_5">5. For <b>Xiaomi</b>, <b>OPPO</b> &amp; <b>VIVO</b> users, Please click on settings link below and <b>enable autostart</b> permission for background search to work properly</string>
    <string name="how_to_use_section_header">How to use section</string>
    <string name="open_app_settings">Open App Settings</string>
    <string name="no_job_scheduled_message">Sorry no background search scheduled.<br />
    Search for center to enable background search</string>
    <string name="search_location">Search Location:</string>
    <string name="age_limit">Age Limit:</string>
    <string name="vaccine_filter">Vaccine Filter:</string>
    <string name="search_condition_num">Search Condition 1</string>
    <string name="search_condition">Search <br />Condition</string>
    <string name="search_sub_heading">Select desired parameters</string>
    <string name="vaccine">Vaccine</string>
    <string name="dose">Dose</string>
    <string name="age">Age</string>
    <string name="covaxin">Covaxin</string>
    <string name="covishield">Covishield</string>
    <string name="sputnik">Sputnik</string>
    <string name="first_dose">1st</string>
    <string name="second_dose">2nd</string>
    <string name="age_group_18_45">18–45</string>
    <string name="age_group_45_plus">45+</string>
    <string name="location">Location</string>
    <string name="search_pincode">Within PIN</string>
    <string name="search_district">Within District</string>
    <string name="search_gps">Within 10km</string>
    <string name="notification_message">Receive notification when new slots open</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="show_results">Show results</string>
    <string name="plus_symbol">+</string>
    <string name="select_state">Select State</string>
    <string name="select_district">Select District</string>
    <string name="slots_vacant">slots vacant</string>
    <string name="auto_detect_location">Auto detect location</string>
</resources>