<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/how_to_use_section_header"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <TextView
            style="@style/info_screen_points_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/how_to_use_point_1" />

        <TextView
            style="@style/info_screen_points_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use_point_2" />

        <TextView
            style="@style/info_screen_points_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use_point_3" />

        <TextView
            style="@style/info_screen_points_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use_point_4" />

        <TextView
            style="@style/info_screen_points_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/how_to_use_point_5" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:backgroundTint="@color/app_settings_button_color"
            android:text="@string/open_app_settings" />

    </LinearLayout>
</ScrollView>


