<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearchActivity">

    <View
        android:id="@+id/view_header"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/primary_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textview_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_condition_num"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/textview_subheading"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textview_subheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_sub_heading"
        android:textColor="@color/sub_heading_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/view_header"
        app:layout_constraintLeft_toLeftOf="@id/textview_heading"
        app:layout_constraintTop_toTopOf="@id/view_header" />

    <TextView
        android:id="@+id/textview_vaccine_heading"
        style="@style/search_parameter_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/vaccine"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textview_dose_heading"
        app:layout_constraintTop_toBottomOf="@id/view_header" />

    <TextView
        android:id="@+id/textview_dose_heading"
        style="@style/search_parameter_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dose"
        app:layout_constraintLeft_toRightOf="@id/textview_vaccine_heading"
        app:layout_constraintRight_toLeftOf="@id/textview_age_heading"
        app:layout_constraintTop_toTopOf="@id/textview_vaccine_heading" />

    <TextView
        android:id="@+id/textview_age_heading"
        style="@style/search_parameter_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        app:layout_constraintLeft_toRightOf="@id/textview_dose_heading"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textview_vaccine_heading" />

    <CheckBox
        android:id="@+id/checkbox_covaxin"
        style="@style/basic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/covaxin"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/textview_dose_heading"
        app:layout_constraintTop_toBottomOf="@id/textview_vaccine_heading" />

    <CheckBox
        android:id="@+id/checkbox_covishield"
        style="@style/basic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/covishield"
        app:layout_constraintLeft_toLeftOf="@id/checkbox_covaxin"
        app:layout_constraintTop_toBottomOf="@id/checkbox_covaxin" />

    <CheckBox
        android:id="@+id/checkbox_sputnik"
        style="@style/basic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/sputnik"
        app:layout_constraintLeft_toLeftOf="@id/checkbox_covaxin"
        app:layout_constraintTop_toBottomOf="@id/checkbox_covishield" />

    <RadioGroup
        android:id="@+id/radio_group_dose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintLeft_toRightOf="@id/textview_vaccine_heading"
        app:layout_constraintRight_toLeftOf="@id/textview_age_heading"
        app:layout_constraintTop_toTopOf="@id/checkbox_covaxin">

        <RadioButton
            android:id="@+id/radio_button_first_dose"
            style="@style/basic_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/first_dose" />

        <RadioButton
            android:id="@+id/radio_button_second_dose"
            style="@style/basic_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/second_dose" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/radio_group_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toRightOf="@id/radio_group_dose"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/checkbox_covaxin">

        <RadioButton
            android:id="@+id/radio_button_18_45_age"
            style="@style/basic_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/age_group_18_45" />

        <RadioButton
            android:id="@+id/radio_button_45_plus_age"
            style="@style/basic_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/age_group_45_plus" />

    </RadioGroup>

    <TextView
        android:id="@+id/textview_location_heading"
        style="@style/search_parameter_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/location"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox_sputnik" />

    <RadioGroup
        android:id="@+id/radio_group_location_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_location_heading">

        <RadioButton
            android:id="@+id/radio_button_location_pincode"
            style="@style/basic_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/search_pincode" />

        <RadioButton
            android:id="@+id/radio_button_location_district"
            style="@style/basic_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/search_district" />

        <RadioButton
            android:id="@+id/radio_button_location_gps"
            style="@style/basic_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:text="@string/search_gps" />

    </RadioGroup>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/radio_group_location_type" />

    <TextView
        android:id="@+id/textview_notification_message"
        style="@style/basic_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/notification_message"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/imageview_notification_button"
        app:layout_constraintTop_toBottomOf="@id/fragment_container" />

    <ImageView
        android:id="@+id/imageview_notification_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@drawable/circular_background"
        android:padding="4dp"
        android:src="@drawable/notification_on"
        app:layout_constraintBottom_toBottomOf="@id/textview_notification_message"
        app:layout_constraintLeft_toRightOf="@id/textview_notification_message"
        app:layout_constraintTop_toTopOf="@id/textview_notification_message" />

    <TextView
        android:id="@+id/textview_notification_status"
        style="@style/search_parameter_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on"
        app:layout_constraintBottom_toBottomOf="@id/textview_notification_message"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toRightOf="@id/imageview_notification_button"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/textview_notification_message" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_show_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:background="@drawable/button_rounded_corners_disabled"
        android:paddingLeft="36dp"
        android:paddingRight="36dp"
        android:text="@string/show_results"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_notification_message" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_bottom_search_number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textview_search_condition_footer"
                style="@style/basic_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="28dp"
                android:text="@string/search_condition"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="32dp"
                android:layout_toEndOf="@id/textview_search_condition_footer"
                android:background="@drawable/rectangle_border"
                android:paddingLeft="10dp"
                android:paddingTop="4dp"
                android:paddingRight="10dp"
                android:paddingBottom="4dp"
                android:text="@string/plus_symbol"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textview_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/textview_one"
                android:background="@drawable/rectangle_border"
                android:paddingLeft="10dp"
                android:paddingTop="4dp"
                android:paddingRight="10dp"
                android:paddingBottom="4dp"
                android:text="@string/plus_symbol"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textview_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/textview_two"
                android:background="@drawable/rectangle_border"
                android:paddingLeft="10dp"
                android:paddingTop="4dp"
                android:paddingRight="10dp"
                android:paddingBottom="4dp"
                android:text="@string/plus_symbol"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textview_four"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/textview_three"
                android:background="@drawable/rectangle_border"
                android:paddingLeft="10dp"
                android:paddingTop="4dp"
                android:paddingRight="10dp"
                android:paddingBottom="4dp"
                android:text="@string/plus_symbol"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textview_five"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_toEndOf="@id/textview_four"
                android:background="@drawable/rectangle_border"
                android:paddingLeft="10dp"
                android:paddingTop="4dp"
                android:paddingRight="10dp"
                android:paddingBottom="4dp"
                android:text="@string/plus_symbol"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>